16. Mise en place d'un outil de création de bibliothèque

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "lint": "npx eslint src tests",
     "fix": "npx eslint src tests --fix",
-    "test": "npx jest"
+    "test": "npx jest",
+    "build": "npx webpack",
+    "build:prod": "npx webpack --mode=production",
+    "build:watch": "npx webpack --watch"
   },
   "keywords": [],
   "author": "",
