--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npx jest",
     "build": "npx webpack",
     "build:prod": "npx webpack --mode=production",
-    "build:watch": "npx webpack --watch"
+    "build:watch": "npx webpack --watch",
+    "start": "npx webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -23,9 +24,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
